# rust-server

./: .gitignore
server/: 404.html  Cargo.toml
server/src/: main.rs  simple_server.rs
